# fractol_linux

./: .gitignore  CMakeLists.txt  Makefile  README.md  fractol.c  fractol.h  keys.h
src/: ft_bsh.c  ft_catch_order.c  ft_check_argv.c  ft_draw_fractal.c  ft_init.c  ft_key_win.c  ft_mb.c  ft_mouse.c  ft_put_pixel.c  julia.c
